# fap-vm-gtk

./: ChangeLog  Makefile.am  README  configure.ac
debian/: changelog  control  fap-vm-gtk.install  rules
src/: Makefile.am  fap-vm-gtk.xml  fap-vm-gtk_old.xml  vmstates.cpp  vmstates.h  vmwindow.cpp  vmwindow.h
test/: fap_vm_gtk_test_inc.xml  fap_vm_gtk_test_rock.xml
