includedir = @includedir@/fapbvpgtk

libdir = @libdir@/fap/plugins

AM_CPPFLAGS = -D_PLAT_LINUX_ -g -O0

lib_LTLIBRARIES = libfapvmgtk.la

libfapvmgtk_la_SOURCES = \
		       vmstates.cpp \
		       vmstates.h \
		       vmwindow.cpp \
		       vmwindow.h 
    

libfapbvpgtk_la_LDFLAGS = -rdynamic -no-undefined
